--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,3 +23,7 @@ jobs:
     - name: Deploy to S3
       run: |
         aws s3 sync ./ s3://noahcloudresume
+      
+     - name: Invalidate CloudFront
+      run: |
+      aws cloudfront create-invalidation --distribution-id E29PCWGY0QM55N --paths "/*"
