--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,9 +1,9 @@
-name: Deploy to S3 and Invalidate CloudFront
+name: Deploy to S3
 
 on:
   push:
     branches:
-      - main
+      - main # Change this to your main branch
 
 jobs:
   deploy:
@@ -12,8 +12,6 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-      with:
-        node-version: 20
 
     - name: Set up AWS CLI
       uses: aws-actions/configure-aws-credentials@v1
@@ -21,12 +19,7 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.AWS_REGION }}
-        node-version: 20
 
     - name: Deploy to S3
       run: |
         aws s3 sync ./ s3://noahcloudresume
-
-    - name: Invalidate CloudFront
-      run: |
-        aws cloudfront create-invalidation --distribution-id E29PCWGY0QM55N --paths "/*"
