--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,9 +1,9 @@
-name: Deploy to S3
+name: Deploy to S3 and Invalidate CloudFront
 
 on:
   push:
     branches:
-      - main # Change this to your main branch
+      - main
 
 jobs:
   deploy:
@@ -23,3 +23,7 @@ jobs:
     - name: Deploy to S3
       run: |
         aws s3 sync ./ s3://noahcloudresume
+
+    - name: Invalidate CloudFront
+      run: |
+        aws cloudfront create-invalidation --distribution-id E29PCWGY0QM55N --paths "/*"
